--- a/api/templates/notifications/general_wrapper.html
+++ b/api/templates/notifications/general_wrapper.html
@@ -5,4 +5,12 @@
 {% endblock %}
 
 {% block body %}
+
+{% endblock %}
+
+{% block signature %}
+<p>
+  <b>ShowsApp’s Mission</b><br/>
+  ShowsApp’s mission is to reduce all the inefficiencies and pains of selling in online local marketplaces so that you can make more money, faster!
+</p>
 {% endblock %}
