--- a/api/templates/notifications/common/reset_password.html
+++ b/api/templates/notifications/common/reset_password.html
@@ -5,5 +5,10 @@
 {% endblock %}
 {% block body %}
 
-Set a new password by clicking  <a href='{% settings_value "FRONTEND_DOMAIN" %}password_reset/{{ user.password_reset_token }}'>here</a>.
+
+<p>Your password reset request has been received. Please click this <a href='{% settings_value "FRONTEND_DOMAIN" %}password_reset/{{ user.password_reset_token }}'>link</a> and you will be taken to a ShowsApp page where you will set a new password.</p>
+
+<p>If you have not attempted to reset your password and have received this email, please forward to security@showsapp.com.</p>
+
+
 {% endblock %}
