--- a/app/src/components/activate/activate.component.html
+++ b/app/src/components/activate/activate.component.html
@@ -1,3 +1,14 @@
-<div>
-  Please wait while we activate your account
-</div>
+<mat-sidenav-container class="side-nav-container">
+  <mat-toolbar color="primary" class="mat-elevation-z6">
+    <mat-toolbar-row>
+      Account Activation
+    </mat-toolbar-row>
+  </mat-toolbar>
+  <div class="base-container">
+    <div class="main-content">
+      <div class="router-container">
+        Please wait while we activate your account
+      </div>
+    </div>
+  </div>
+</mat-sidenav-container>
