working on create item form.

--- a/app/src/components/activate/activate.component.html
+++ b/app/src/components/activate/activate.component.html
@@ -22,7 +22,7 @@
               </div>
             </div>
             <div class="activation-failed" *ngIf="retryActivation">
-              <mat-icon color="primary" class="x-large">error</mat-icon>
+              <mat-icon color="primary" class="x-large">error_outline</mat-icon>
               <div class="retry-message">
                 <span>There was a problem with activating your account please try agin</span>
               </div>
