--- a/app/src/components/activate/activate.component.scss
+++ b/app/src/components/activate/activate.component.scss
@@ -44,7 +44,7 @@
       .progress-loading {
         margin-top: 20px;
       }
-      .activation-failed {
+      .activation-failed, .activation-pending {
         @include flexbox();
         @include flex-direction(column);
         @include justify-content(center);
