working on session management and incorporating templates.

--- a/app/src/components/base/base.component.html
+++ b/app/src/components/base/base.component.html
@@ -1,7 +1,8 @@
 <mat-sidenav-container class="side-nav-container">
   <mat-toolbar color="primary" class="mat-elevation-z6">
     <mat-toolbar-row>
-      Shows App
+      <span>Shows App</span>
+      <button mat-button (click)="logout()">LOGOUT</button>
     </mat-toolbar-row>
   </mat-toolbar>
   <div class="base-container">
