--- a/app/src/components/base/base.component.scss
+++ b/app/src/components/base/base.component.scss
@@ -7,8 +7,12 @@
   height: 100vh;
   width: 100vw;
 
-  mat-toolbar-row{
+  mat-toolbar-row {
     padding: 0 20px;
+    span{
+      @include flex-grow(1);
+
+    }
   }
 
 }
@@ -21,15 +25,15 @@
   overflow-x: hidden;
   overflow-y: hidden;
 
-  mat-toolbar-row{
+  mat-toolbar-row {
     padding: 0 20px;
   }
 
-  .main-content{
+  .main-content {
     height: 100%;
     width: 100%;
 
-    .router-container{
+    .router-container {
       height: 100%;
       width: 100%;
     }
@@ -55,8 +59,6 @@
   }
 }
 
-
-
 mat-toolbar-row {
   padding-left: 0;
 }
@@ -79,3 +81,5 @@ mat-toolbar-row {
     border-radius: 0;
   }
 }
+
+
