--- a/app/src/components/sellerItem/sellerItem.component.html
+++ b/app/src/components/sellerItem/sellerItem.component.html
@@ -6,10 +6,44 @@
     </button>
   </div>
   <div class="item-content-container">
-    <div class="form-container" *ngIf="formGenerated"></div>
-    <!--<form></form>-->
+    <div class="form-container">
+      <form novalidate [formGroup]="itemFormControl">
+
+        <mat-form-field>
+          <input matInput required placeholder="Product Name" type="text" formControlName="productName"
+                 id="productName" tabindex="0"/>
+          <mat-error *ngIf="itemFormControl.get('productName').hasError('required')">
+            Product name is required
+          </mat-error>
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput required placeholder="Address" type="text" formControlName="address"
+                 id="addressField" tabindex="0"/>
+          <mat-error *ngIf="itemFormControl.get('address').hasError('required')">
+            Please provide an address
+          </mat-error>
+        </mat-form-field>
+        <mat-form-field>
+  <textarea matInput placeholder="Description" matTextareaAutosize matAutosizeMinRows="0"
+            matAutosizeMaxRows="10" formControlName="description"></textarea>
+          <mat-error *ngIf="itemFormControl.get('description').hasError('required')">
+            Please provide a description
+          </mat-error>
+        </mat-form-field>
+        <mat-form-field>
+          <span matPrefix>$ &nbsp;</span>
+          <input matInput placeholder="Price" formControlName="price">
+          <mat-error *ngIf="itemFormControl.get('price').hasError('required')">
+            Please provide a price
+          </mat-error>
+        </mat-form-field>
+      </form>
+    </div>
+
   </div>
-  <button mat-button color="primary" (click)="processItemAction()">{{createItem ? 'ADD ITEM' : 'SAVE'}}</button>
+  <button mat-button [disabled]="!itemFormControl.valid" color="primary" (click)="processItemAction()">{{createItem ?
+    'ADD ITEM' : 'SAVE'}}
+  </button>
 </div>
 
 
