--- a/app/src/components/sellerItem/sellerItem.theme.scss
+++ b/app/src/components/sellerItem/sellerItem.theme.scss
@@ -35,6 +35,17 @@
     }
   }
 
+  .form-container {
+    form {
+      @include flexbox();
+      @include flex-direction(column);
+
+      mat-form-field {
+        max-width: 400px;
+      }
+    }
+  }
+
 }
 
 
