--- a/app/src/components/createSellerItem/sellerItem.component.html
+++ b/app/src/components/createSellerItem/sellerItem.component.html
@@ -17,11 +17,12 @@
           </mat-error>
         </mat-form-field>
         <mat-form-field>
-          <input matInput required placeholder="Address" type="text" formControlName="address"
+          <input matInput required placeholder="Major Intersection" type="text" formControlName="address"
                  id="addressField" tabindex="0"/>
           <mat-error *ngIf="itemFormControl.get('address').hasError('required')">
             Please provide an address
           </mat-error>
+          <mat-hint class="right-align">Closest Intersection</mat-hint>
         </mat-form-field>
         <mat-form-field>
   <textarea matInput placeholder="Description" matTextareaAutosize matAutosizeMinRows="0"
@@ -32,15 +33,15 @@
         </mat-form-field>
         <mat-form-field>
           <span matPrefix>$ &nbsp;</span>
-          <input matInput placeholder="Price" formControlName="price">
+          <input matInput placeholder="Price" formControlName="price" type="number">
           <span matSuffix>.00</span>
           <mat-error *ngIf="itemFormControl.get('price').hasError('required')">
             Please provide a price
           </mat-error>
-          <mat-error *ngIf="itemFormControl.get('price').hasError('required')">
+          <mat-error *ngIf="itemFormControl.get('price').hasError('min')">
             Please provide a price that is greater than 0
           </mat-error>
-          <mat-error *ngIf="itemFormControl.get('price').hasError('required')">
+          <mat-error *ngIf="itemFormControl.get('price').hasError('max')">
             Please provide a price that is less than 1000000
           </mat-error>
 
