--- a/app/src/components/seller/sellerDashboard.component.scss
+++ b/app/src/components/seller/sellerDashboard.component.scss
@@ -1,8 +1,9 @@
 @import '../../shared/styles/_mixins';
 
-.embed-link{
+.embed-link {
   margin: 10px 0;
 }
+
 .content-container {
   @include flexbox();
   @include flex-direction(column);
@@ -30,16 +31,15 @@
 
 }
 
-
-.card-title-row{
+.card-title-row {
   @include flexbox();
   @include flex-direction(row);
+  margin-bottom: 5px;
   .card-title {
     @include flex-grow(1);
     @include flex-wrap(wrap);
   }
 }
-
 
 .main-container {
   @include flexbox();
