--- a/app/src/components/activate/activate.component.scss
+++ b/app/src/components/activate/activate.component.scss
@@ -50,7 +50,6 @@
         @include justify-content(center);
         @include align-items(center);
 
-
         button, span {
           margin-top: 20px;
         }
@@ -63,6 +62,18 @@
 
 mat-toolbar-row {
   padding-left: 0;
+}
+
+.form-control-container {
+  form{
+    @include flexbox();
+    @include flex-direction(column);
+  }
+
+
+  mat-form-field {
+    width: 300px;
+  }
 }
 
 
